# libformfactor

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Config.cmake.in  LICENSE  README.docx  README.md  libformfactor.pc.in
binding/: CMakeLists.txt  keepingthisinacorner_CMakeLists.txt  pave.cpp  pave.h  pave.i
binding/ff/: Cuboid.h  Penta.cpp  Penta.h  PolyhedralComponents.h  Polyhedron.h  Tri.cpp
binding/src/: pave.cpp  pave.i
demo/: CMakeLists.txt  cube.cpp  deca1.cpp  octahedron.cpp  pave.cpp  pave_model.cpp  tetrahedron.cpp  tribifrustum.cpp  tribifrustum1.cpp  tribifrustum2.cpp  tribifrustum3.cpp  tribipy.cpp
ff/: CMakeLists.txt  Cuboid.cpp  Factorial.h  Platonic.cpp  Platonic.h  PolyhedralComponents.cpp  PolyhedralComponents.h  PolyhedralTopology.h  Polyhedron.cpp  Polyhedron.h  Prism.cpp  Prism.h  Tri.cpp  Tri.h
lib/: BasicVector3D.cpp  BasicVector3D.h  CMakeLists.txt  Complex.h  Factorial.h  PolyhedralComponents.cpp  PolyhedralComponents.h  PolyhedralTopology.h  Polyhedron.cpp  Polyhedron.h  Vec3.cpp  Vec3.h  Vectors3D.h
test/: CMakeLists.txt  FactorialTest.cpp  PrecomputedTest.cpp  TestTriangle.cpp  TriangleTest.cpp
